updating config add method
