# src/main/java/com/dev/focusshield/controller/focus_config/FocusConfigController.java
@@ -3,7 +3,6 @@ package com.dev.focusshield.controller.focus_config;
 import com.dev.focusshield.model.FocusConfig;
 import com.dev.focusshield.model.FocusConfigRequest;
 import com.dev.focusshield.service.focus_config.FocusConfigService;
-import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -24,18 +23,15 @@ public class FocusConfigController {
      * Save a new focus configuration for the authenticated user.
      *
      * @param configRequest the focus config request
-     * @param request       the HTTP request containing the universalId
      * @return HTTP 201 CREATED
      */
     @PostMapping
     public ResponseEntity<Void> saveFocusConfiguration(
-            @RequestBody FocusConfigRequest configRequest,
-            HttpServletRequest request
+            @RequestBody FocusConfigRequest configRequest
     ) {
-        focusConfigService.saveFocusConfiguration(configRequest, request);
+        focusConfigService.saveFocusConfiguration(configRequest);
         return ResponseEntity.status(201).build();
     }
-
     /**
      * Get the latest active focus configuration.
      *
@@ -50,12 +46,11 @@ public class FocusConfigController {
     /**
      * Get all focus configurations for the current user.
      *
-     * @param request the HTTP request containing the universalId
      * @return list of FocusConfig
      */
-    @GetMapping("/all")
-    public ResponseEntity<List<FocusConfig>> getAllConfigsForUser(HttpServletRequest request) {
-        List<FocusConfig> configs = focusConfigService.getAllConfigsForUser(request);
+    @GetMapping
+    public ResponseEntity<List<FocusConfig>> getAllConfigsForUser( ) {
+        List<FocusConfig> configs = focusConfigService.getAllConfigsForUser();
         return ResponseEntity.ok(configs);
     }
 
